# pgbattery

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE_COMMERCIAL  README.md  _typos.toml  build.rs  deny.toml  docker-compose.yml
.cargo/: audit.toml
.github/: actionlint.yaml  apply-settings.sh  dependabot.yml  settings.json
.github/workflows/: ci.yml  cla.yml  correctness-lite.yml  elle.yml  fuzz.yml  ha-ci.yml  prettier.yml  release.yml  supply-chain.yml  tla.yml
benches/: gateway.rs
config/: node1.toml  node2.toml  node3.toml  node4.toml
crates/pgbattery-core/: Cargo.toml
crates/pgbattery-core/src/: clock.rs  constants.rs  error.rs  lib.rs  types.rs
crates/pgbattery-supervisor/: Cargo.toml
crates/pgbattery-supervisor/src/: backup.rs  lib.rs  process.rs
demo/: bench-results.json  bench.py  failover.tape  failover_demo.py
docs/: ARCHITECTURE.md  CONTRACTS.md  DEPLOYMENT.md  MEMBERSHIP.md  RELEASING.md  RUNBOOK.md  STATE_MACHINE.md
docs/legal/: CCLA.md  ICLA.md
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: cluster_commands.rs  parse_lsn.rs
scripts/: sign-release.sh
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
src/cluster/: client.rs  membership.rs  mod.rs
src/commands/: backup.rs  cluster.rs  common.rs  doctor.rs  init.rs  join.rs  mod.rs  status.rs  upgrade.rs
src/commands/upgrade/: cosign.rs  mod.rs
src/config/: constants.rs  mod.rs  types.rs
src/gateway/: connection.rs  mod.rs  protocol.rs  proxy.rs  session_replay.rs  ssl.rs
src/gateway/handlers/: mod.rs
src/governor/: lease.rs  mod.rs  network.rs  raft.rs  replication_manager.rs  state_machine.rs  storage.rs  tls.rs
src/observability/: debug_events.rs  logging.rs  metrics.rs  mod.rs
src/observability/management_api/: backup.rs  cluster.rs  debug.rs  discovery.rs  lsn.rs  mod.rs
src/supervisor/: mod.rs
testing/: aggregate_elle_results.py  build_elle.sh  ci_matrix.yaml  ci_runner.py  correctness_lite.py  db_clients.py  elle_adapter.py  fault_primitives.py  five_node_suite.py  linearizability_register.py  lint_matrix.py  migration_test.py  overnight_test.py  pyproject.toml  run_elle_matrix.sh  test_elle_adapter.py
testing/elle_shim/: README.md  project.clj  smoke_history.json
testing/elle_shim/src/pgbattery_elle_shim/: core.clj
testing/sql/: acked-write-durability-assert.sql  acked-write-durability-post.sql  acked-write-durability-pre.sql  acked-write-durability-setup.sql  assert-sanity-acked-bad.sql  assert-sanity-concurrent-bad.sql  assert-sanity-diverged-bad.sql  async-degraded-durability-assert.sql  async-degraded-durability-fenced.sql  async-degraded-durability-mid.sql  async-degraded-durability-pre.sql  async-degraded-durability-setup.sql  backup-consistency-assert.sql  backup-consistency-b1.sql  backup-consistency-b2.sql  backup-consistency-setup.sql  backup-restore-valid-assert.sql  backup-restore-valid-post.sql  backup-restore-valid-setup.sql  concurrent-backup-setup.sql  concurrent-writes-assert.sql  concurrent-writes-setup.sql  ddl-failover-assert.sql  ddl-failover-setup.sql  diverged-node-rejoin-assert.sql  diverged-node-rejoin-insert.sql  diverged-node-rejoin-setup.sql  double-failover-assert.sql  double-failover-setup.sql  failover-commit-boundary-assert.sql  failover-commit-boundary-autocommit.sql  failover-commit-boundary-setup.sql  leader-crash-survival-assert.sql  leader-crash-survival-setup.sql  leadership-churn-livelock-write.sql  leadership-transfer-survival-assert.sql  leadership-transfer-survival-setup.sql  majority-loss-write.sql  network-latency-assert.sql  network-latency-setup.sql  (+27 more)
tests/fixtures/cosign/: README.md  blob.sig  leaf.pem  rekor_key_id.txt  rekor_valid.bundle  root.pem
tla/: Makefile  README.md  commit_probing.cfg  commit_probing.tla  lease_fencing.cfg  lease_fencing.tla  raft_lsn.cfg  raft_lsn.tla  timeline_verification.cfg  timeline_verification.tla
