[project]
name = "pgbattery-chaos-test"
version = "0.1.0"
description = "Overnight chaos testing for pgbattery PostgreSQL HA cluster"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "psycopg[binary]==3.2.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.11",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "typer",
    "typer.*",
    "pydantic",
    "pydantic.*",
    "rich",
    "rich.*",
    "yaml",
    "psycopg",
    "psycopg.*",
]
ignore_missing_imports = true
